force-app/main/default/objects/ContentDocument/fields/DocType__c.field-meta.xml
<CustomField>
    <fullName>DocType__c</fullName>
    <label>Document Type</label>
    <description>Type of KYC document</description>
    <inlineHelpText>Select the document type</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar</fullName>
                <default>true</default>
                <label>Aadhaar</label>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Income Proof</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Salary Slip</fullName>
            </value>
            <value>
                <fullName>Form 16</fullName>
            </value>
            <value>
                <fullName>GST Certificate</fullName>
            </value>
            <value>
                <fullName>Business Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>