force-app/main/default/objects/ContentDocument/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>Expiry Date</label>
    <description>Date when document expires</description>
    <inlineHelpText>Enter the expiration date of the document</inlineHelpText>
    <type>Date</type>
</CustomField>