force-app/main/default/objects/ContentDocument/fields/IsReusable__c.field-meta.xml
<CustomField>
    <fullName>IsReusable__c</fullName>
    <label>Is Reusable</label>
    <description>Indicates if document can be reused</description>
    <inlineHelpText>Check if this document can be used for multiple accounts</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>