force-app/main/default/objects/ContentDocument/fields/UploadDate__c.field-meta.xml
<CustomField>
    <fullName>UploadDate__c</fullName>
    <label>Upload Date</label>
    <description>Date when document was uploaded</description>
    <inlineHelpText>Date the document was uploaded to the system</inlineHelpText>
    <type>Date</type>
</CustomField>