force-app/main/default/objects/ContentDocument/fields/VerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>VerificationStatus__c</fullName>
    <label>Verification Status</label>
    <description>Current verification status of document</description>
    <inlineHelpText>Select the current verification status</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>