force-app/main/default/objects/ContentDocument/fields/VerifiedBy__c.field-meta.xml
<CustomField>
    <fullName>VerifiedBy__c</fullName>
    <label>Verified By</label>
    <description>Person or system that verified document</description>
    <inlineHelpText>Enter who verified this document (e.g., Branch name, Digital KYC)</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>